--- a/atmoptions.html
+++ b/atmoptions.html
@@ -104,14 +104,16 @@
 			
 			.main{
 				width:1200px;
+				margin:auto;
 			}
+			
 			
 		</style>
 		
 	</head>
 	
-	<body>
-	<div class="main">
+	<body class="main">
+	
 		<div class="head">
 			<h1>ATM</h1>
 			<h3>Card Return</h3>
@@ -155,7 +157,7 @@
 		</div>
 		
 		</div>
-		</div>
+		
 	</body>
 	
 </html>
