--- a/number game.html
+++ b/number game.html
@@ -13,6 +13,14 @@
 			font-family:'Press Start 2P', bold;
 			
 		}
+		.buttons{
+			margin:25px;
+			margin-left:45px;
+			height:40px;
+			width:150px;
+			font-family:'Press Start 2P', bold;
+			
+		}
 		.button{
 			margin:25px;
 			margin-left:45px;
@@ -90,7 +98,7 @@
 	<body class="body">
 		<div class="top">
 				
-				<input class="button" type="button" value="again!" onclick="again()">
+				<input class="buttons" type="button" value="again!" onclick="again()">
 				<h3 class="trails">(Between 1 to 20)</h3>
 				<h1>Guess My Number!</h1>
 				<hr>
@@ -101,7 +109,7 @@
 		</div>
 		<div class="left">
 				<input class="input" type="text" placeholder="enter between 1-20"><br>
-				<input class="button" type="button" value="check!" onclick="check()"><br>
+				<input class="button"type="button" value="check!" onclick="check()"><br>
 				
 		<div class="right">
 				<h3 id="range">Start Guessing....</h3>
