--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <p class="current-score" id="current--0">0</p>
         </div>
       </section>
-      <section class="player player--1" id="player player--1">
+      <section1 class="player player--1" id="player player--1">
         <h2 class="name" id="name--1">Player 2</h2>
         <p class="score" id="score--1">0</p>
         <div class="current">
