--- a/atm-task.html
+++ b/atm-task.html
@@ -14,7 +14,7 @@
    			<h1>LOGIN NOW</h1></n>
             <form>
                <p></p>
-              <span class="cancel">&times</span>
+              <span class="cancel">&times;</span>
                <input class="place" type="number" placeholder="ACCOUNT NUMBER"  Id="accountnumber"><br></n>
                <p></p>
               
@@ -33,7 +33,7 @@
 	
 		<div class="head">
 			<h1 class="atm">ATM</h1>
-			<h3>Card Return<span class="complete">&times</span></h3>
+			<h3>Card Return<span class="cancel">&times</span></h3>
 		
 		<div>
 		
@@ -64,14 +64,14 @@
 		<br><br><br><br>
    		<div id="optwithdraw">
    			<h4>ENTER MONEY<h4>
-   			<span class="cancel">&times</span>
+   			<span class="cancel">&times;</span>
    			<input id="withdrawvalue" type="number" placeholder="$"><br>
    			<button id="withdrawbutton">WITHDRAW</button>
    		</div>
    		<br>
    		<div id="optdeposit">
    			<h4>ENTER MONEY<h4>
-   			<span class="cancel">&times</span>
+   			<span class="cancel">&times;</span>
    			<input id="depositvalue" type="number" placeholder="$"><br>
    			<button id="depositbutton">DEPOSIT</button>
    		</div>
