--- a/atm-task.html
+++ b/atm-task.html
@@ -73,7 +73,8 @@
    		</div>
    		
    		<div class="tables">
-   			<h1>TRANSACTIONS</h2><span class="cancel4">&times;</span>
+   			<h1><button class="diphistory" onclick="deposithistory()">deposit history</button>TRANSACTIONS<button class="withhistory" onclick="withhistory()">withdraw history</button></h2><span class="cancel4">&times;</span>
+   			<button class="completehistory" onclick="transactions()">complete history</button>
    			<table class="result">
    				<tr>
    				<th>S.no</th>
