--- a/forkify.html
+++ b/forkify.html
@@ -94,22 +94,22 @@
 				<h2>RECIPE INGREDIENTS</h2>
 				
 				<ul class="ul-div">
-				<li class="li-div"><span><img src="icons-done.svg"></span>½ teaspoon ground turmeric</li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>1 teaspoon red chili powder</li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>1½ teaspoons salt</li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>1 cup frozen green peas, </li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>1 tablespoon lemon juice</li>
-			    <li class="li-div"><span><img src="icons-done.svg"></span>2 tablespoons chopped </li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>Chutney, for serving</li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>½ teaspoon garam masala</li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>½ teaspoon ground turmeric</li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>1 teaspoon red chili powder</li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>1½ teaspoons salt</li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>1 cup frozen green peas</li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>1 tablespoon lemon juice</li>
-			    <li class="li-div"><span><img src="icons-done.svg"></span>2 tablespoons chopped </li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>½ teaspoon ground turmeric</li>
-				<li class="li-div"><span><img src="icons-done.svg"></span>1 teaspoon red chili powder</li>
+				<li class="li-div">½ teaspoon ground turmeric</li>
+				<li class="li-div">1 teaspoon red chili powder</li>
+				<li class="li-div">1½ teaspoons salt</li>
+				<li class="li-div">1 cup frozen green peas, </li>
+				<li class="li-div">1 tablespoon lemon juice</li>
+			    <li class="li-div">2 tablespoons chopped </li>
+				<li class="li-div">Chutney, for serving</li>
+				<li class="li-div">½ teaspoon garam masala</li>
+				<li class="li-div">½ teaspoon ground turmeric</li>
+				<li class="li-div">1 teaspoon red chili powder</li>
+				<li class="li-div">1½ teaspoons salt</li>
+				<li class="li-div">1 cup frozen green peas</li>
+				<li class="li-div">1 tablespoon lemon juice</li>
+			    <li class="li-div">2 tablespoons chopped </li>
+				<li class="li-div">½ teaspoon ground turmeric</li>
+				<li class="li-div">1 teaspoon red chili powder</li>
 		</ul>
 		</div>
 		
