--- a/forkify.html
+++ b/forkify.html
@@ -19,9 +19,9 @@
 	
 		<div class="sidebar">
 			
-			<ul>
+			<ul id="sathya">
 			
-					<li><div  class="list">
+					<!--<li><div  class="list">
 										<div class="pic"><img class="item" src="briyani"></div>
 										<div class="dis"><p class="listhead">DUM BRIYANI HYDERABADI SPECIAL</p><p class="dec">ready to eat</p></div>
 									</div>
@@ -67,7 +67,7 @@
 										<div class="pic"><img class="item" src="briyani"></div>
 										<div class="dis"><p class="listhead">DUM BRIYANI</p><p class="dec">ready to eat</p></div>
 									</div>
-					</li>	
+					</li>	-->
 						
 			</ul>
 		
@@ -115,8 +115,8 @@
 		
 		<footer>
 			<div class="left-foot">
-				<button class="backward"><img class="arrow" src="arrow_left_icon.svg"><span>page 3</span></button>
-				<button class="forward"><span>page 5</span><img class="arrow" src="right_arrow_icon.svg"></button>
+				<button class="backward"><img class="arrow" src="arrow_left_icon.svg"><span>page</span></button>
+				<button class="forward"><span>page</span><img class="arrow" src="right_arrow_icon.svg"></button>
 					<p class="copy">&copy copyright by <U>SATHYA MUDILI</U> use for only educational purpose.</p>
 			</div>
 			
@@ -131,5 +131,8 @@
 		</footer>
 		
 		</div>
+		<script src="forkifydata.js"></script>
+		<script src="forkify.js"></script>
+		
 </body>
 </html>
