--- a/forkify.html
+++ b/forkify.html
@@ -11,7 +11,7 @@
 	
 			<header class=" clearfix">
 				<div class="logo"><img class="logo1" src="logo2.png"></div>
-				<div class="in"><input type="text" placeholder="Search over 1000000 recipies" >
+				<div class="in"><input type="text" class="user-input" placeholder="Search over 1000000 recipies" >
 				<button class="search"><img class="icons" src="search_icon .svg"><span class="head-text">search</span></button></div>
 				<div class="add"><button class="add1"><img class="icons" src="note_icon .svg"><span class="head-text">ADD RECIPIE</span></button>
 				<button class="bookmark"><img class="icons" src="icons8-bookmark.svg"><span class="head-text">BOOK MARKS</span></button></div>
@@ -91,10 +91,10 @@
 		
 		<div class="materials">
 			
-				<h2>RECIPE INGREDIENTS</h2>
+				<!--<h2>RECIPE INGREDIENTS</h2>-->
 				
 				<ul class="ul-div">
-				<li class="li-div">½ teaspoon ground turmeric</li>
+				<!--<li class="li-div">½ teaspoon ground turmeric</li>
 				<li class="li-div">1 teaspoon red chili powder</li>
 				<li class="li-div">1½ teaspoons salt</li>
 				<li class="li-div">1 cup frozen green peas, </li>
@@ -107,7 +107,7 @@
 				<li class="li-div">1½ teaspoons salt</li>
 				<li class="li-div">1 cup frozen green peas</li>
 				<li class="li-div">1 tablespoon lemon juice</li>
-			    <li class="li-div">2 tablespoons chopped </li>
+			    <li class="li-div">2 tablespoons chopped </li>-->
 		</ul>
 		</div>
 		
@@ -131,8 +131,8 @@
 		</footer>
 		
 		</div>
-		<script src="forkifydata.js"></script>
-		<script src="forkify.js"></script>
-		
+		<!--<script src="forkifydata.js"></script>
+		<script src="forkify.js"></script>-->
+		<script src="forkify1.js"></script>
 </body>
 </html>
