--- a/forkify.html
+++ b/forkify.html
@@ -21,12 +21,12 @@
 			
 			<ul id="sathya">
 			
-					<!--<li><div  class="list">
-										<div class="pic"><img class="item" src="briyani"></div>
-										<div class="dis"><p class="listhead">DUM BRIYANI HYDERABADI SPECIAL</p><p class="dec">ready to eat</p></div>
+					<li><div  class="list">
+										<div class="pic"></div>
+										<div class="dis"><p class="listhead"></p><p class="dec"></p></div>
 									</div>
 					</li>			
-					<li>
+					<!--<li>
 									<div  class="list">
 										<div class="pic"><img class="item" src="briyani"></div>
 										<div class="dis"><p class="listhead">DUM BRIYANI</p><p class="dec">ready to eat</p></div>
@@ -67,7 +67,7 @@
 										<div class="pic"><img class="item" src="briyani"></div>
 										<div class="dis"><p class="listhead">DUM BRIYANI</p><p class="dec">ready to eat</p></div>
 									</div>
-					</li>	-->
+					</li>-->
 						
 			</ul>
 		
@@ -134,5 +134,6 @@
 		<!--<script src="forkifydata.js"></script>
 		<script src="forkify.js"></script>-->
 		<script src="forkify1.js"></script>
+		<script src="forkify2.js"></script>
 </body>
 </html>
