--- a/restaurent.html
+++ b/restaurent.html
@@ -13,8 +13,8 @@
     <div class="parent">
 
         <header class="headbar">
-            <button>Orders</button>
-            <button>Current</button>
+            <button class="show-list">Orders</button>
+            <button class="current">Current</button>
         </header>
 
         <div class="main-display">
@@ -24,89 +24,33 @@
                 <!-- <div class="item">
                     <h4>hello</h4>
                     <p>price</p>
-                </div>
-
-                <div class="item">
-                    <h4>hello</h4>
-                    <p>price</p>
-                </div>
-
-                <div class="item">
-                    <h4>hello</h4>
-                    <p>price</p>
-                </div>
-
-                <div class="item">
-                    <h4>hello</h4>
-                    <p>price</p>
-                </div>
-
-                <div class="item">
-                    <h4>hello</h4>
-                    <p>price</p>
-                </div>
-
-                <div class="item">
-                    <h4>hello</h4>
-                    <p>price</p>
-                </div>
-
-                <div class="item">
-                    <h4>hello</h4>
-                    <p>price</p>
                 </div>-->
             </div>
 
             <div class="orders-list">
                 <div>Table 5| Max
-                    <button class="clearing">clear</button>
+                    <button class="clear">clear</button>
                 </div>
-                <input class="details" type="text">
+                <input class="details" type="text" value="">
+                <div class="orders">
+                    <div class="tableinfo">
+                        <table class="table-data">
+                            <tr>
+                                <th>Item</th>
+                                <th>Quantity</th>
+                                <th>Price</th>
+                            </tr>
 
-                <div class="tableinfo">
-                    <table class="table-data">
-                        <tr>
-                            <th>Item</th>
-                            <th>Quantity</th>
-                            <th>Price</th>
-                        </tr>
-
-                        <!-- <tr>
-                            <td>cucumber curry</td>
-                            <td><input type="number"></td>
-                            <td>200</td>
-                        </tr>
-
-                        <tr>
-                            <td>cucumber curry</td>
-                            <td><input type="number"></td>
-                            <td>200</td>
-                        </tr>
-                        <tr>
-                            <td>cucumber curry</td>
-                            <td><input type="number"></td>
-                            <td>200</td>
-                        </tr>
-
-                        <tr>
-                            <td>cucumber curry</td>
-                            <td><input type="number"></td>
-                            <td>200</td>
-                        </tr>
-
-                        <tr>
-                            <td>cucumber curry</td>
-                            <td><input type="number"></td>
-                            <td>200</td>
-                        </tr>
+                            <!-- 
                         <tr>
                             <td>DISCOUNT</td>
                             <td><input type="number"></td>
                             <td>200</td>
                         </tr> -->
-                    </table>
+                        </table>
+                    </div>
                 </div>
-                <div>
+                <div class="bill-bottom">
                     <table>
                         <td id="discount">DISCOUNT</td>
                         <td><input type="number" class="discountbar"></td>
