--- a/restaurent.html
+++ b/restaurent.html
@@ -56,7 +56,7 @@
                         <td><input type="number" class="discountbar"></td>
                         <td class="totaldiscount"></td>
                     </table>
-                    <p>Taxes <span class="taxes">86</span></p>
+                    <p>Taxes <span class="taxes"></span></p>
                     <button class="order">Order Ticket &nbsp;(F9)</button>
                     <button class="payment">Charge <span class="total">2000</span> &nbsp;(F2)</button>
                 </div>
