duplicate data elimination is pending

--- a/restaurent.html
+++ b/restaurent.html
@@ -36,10 +36,14 @@
                     <div class="tableinfo">
                         <table class="table-data">
                             <tr>
+                                <!-- <th>Id</th> -->
                                 <th>Item</th>
                                 <th>Quantity</th>
                                 <th>Price</th>
                             </tr>
+                            <tbody class="table-datas">
+
+                            </tbody>
 
                             <!-- 
                         <tr>
