--- a/restaurent.html
+++ b/restaurent.html
@@ -36,7 +36,7 @@
                     <div class="tableinfo">
                         <table class="table-data">
                             <tr>
-                                <!-- <th>Id</th> -->
+                                <th>Id</th>
                                 <th>Item</th>
                                 <th>Quantity</th>
                                 <th>Price</th>
@@ -117,6 +117,6 @@
         </div>
     </div>
 </body>
-<script src="restaurent.js"></script>
+<script src="restaurents.js"></script>
 
 </html>
