--- a/forkify.html
+++ b/forkify.html
@@ -125,7 +125,7 @@
 				<h2>HOW TO COOK IT</h2>
 				<p class="process-align">this recipe is designed and tested by <b>What's Gabby Cooking</b>.Please checkout the directions how to cook it</p>
 				
-				<button class="direction">directions<span><img class="arrow" src="right_arrow_icon .svg"></span></button>
+				<button class="direction" id="directions" href="">directions<span><img class="arrow" src="right_arrow_icon .svg"></span></button>
 			</div>
 			
 		</footer>
