--- a/digiency.html
+++ b/digiency.html
@@ -49,7 +49,8 @@
     <div class="our-services">
 
         <div class="services-head">
-            <h6 class="service">Our Services</h6>
+            <h6 class="service"> <hr class="dash"> Our Services <hr class="dash"></h6>
+            <br>
             <h2 class="to-do">What We Do</h2>
         </div>
 
