--- a/digiency-project/homepage.html
+++ b/digiency-project/homepage.html
@@ -11,37 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;600&family=Poppins:wght@300&display=swap"
         rel="stylesheet">
-    <style>
-        * {
-            font-family: Poppins;
-            ;
-        }
-
-        body {
-            background-color: #FFF7F4;
-        }
-
-        ul {
-            list-style: none;
-        }
-        .navitem{
-            color:black;
-        }
-        .talk-btn:hover,.navitem:hover{
-            color: #FF5300
-        }
-        .talk-btn{
-            background-color: #FFF7F4 ;
-            border-radius: 5px;
-            border-width: 1px;
-        }
-        .start{
-            background-color: #FF5300;
-            border-radius: 5px;
-            border: none;
-        }
-
-    </style>
+        <link rel="stylesheet" href="homepage.css">
 </head>
 
 <body>
@@ -86,11 +56,11 @@
                 </p>
 
                 <p class="fw-normal second-txt">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Nobis impedit vitae, excepturi voluptatum soluta mollitia
-                     temporibus velit delectus est nam, inventore deserunt. 
-                     Aliquam id voluptatibus corporis hic cupiditate expedita 
-                     consectetur!
+                    temporibus velit delectus est nam, inventore deserunt.
+                    Aliquam id voluptatibus corporis hic cupiditate expedita
+                    consectetur!
                 </p>
 
                 <button class="start mt-5 px-3 py-2">Get Start Now</button>
@@ -102,6 +72,6 @@
         </div>
     </div>
 </body>
-<script src="../digiency-project/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </html>
