--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <!-- Head buttons section -->
         <div class="row my-3 justify-content-center">
             <div class="col-6 text-center d-flex">
-                <div class="col-2 py-2 specific-button series">Series</div>
-                <div class="col-2 py-2 specific-button matches">Matches</div>
-                <div class="col-2 py-2 specific-button schedule">Schedule</div>
-                <div class="col-2 py-2 specific-button result">Results</div>
-                <div class="col-2 py-2 specific-button players">Players</div>
-                <div class="col-2 py-2 specific-button Points">Points</div>
+                <div class="col-2 py-2 specific-button series" id="Series">Series</div>
+                <div class="col-2 py-2 specific-button matches" id="Matches">Matches</div>
+                <div class="col-2 py-2 specific-button schedule" id="Schedule">Schedule</div>
+                <div class="col-2 py-2 specific-button result" id="Results">Results</div>
+                <div class="col-2 py-2 specific-button players" id="players">Players</div>
+                <div class="col-2 py-2 specific-button Points" id="points">Points</div>
             </div>
         </div>
 
